# book-recommendation-app

./: Dockerfile.backend  docker-compose.override.yml  docker-compose.yaml  pyproject.toml
src/book_recommendation_frontend/: Dockerfile.frontend  nginx.conf.template  package-lock.json  package.json  tailwind.config.js
src/book_recommendation_frontend/src/: App.vue  main.js  style.css
src/book_recommendation_frontend/src/router/: index.js
src/book_recommendation_frontend/src/views/: BookDetailView.vue  SearchView.vue
src/book_recommendation_prod/: book_rec.py  data_inspection.ipynb  main.py
src/book_recommendation_prod/api/: book_user.py  rating_user.py
src/book_recommendation_prod/models/: schemas.py
src/book_recommendation_prod/services/: book_manager.py  rating_manager.py  utils.py
