[tool.poetry]
name = "book-recommendation-prod"
version = "0.1.0"
description = ""
authors = ["Vladyslav Zlochevskyi <vlavip98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
numpy = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
